--- a/wechat/wechat.desktop
+++ b/wechat/wechat.desktop
@@ -2,10 +2,20 @@
 Name=wechat
 Name[zh_CN]=微信
 Comment=wechat
-Comment[zh_CN]=微信
-Exec=wechat
+Comment[zh_CN]=微信桌面版
+Exec=wechat %u
 Type=Application
 StartupNotify=true
+Categories=Utility;Network;InstantMessaging;Chat;
 Terminal=false
 Icon=wechat
-Categories=Network;
+StartupWMClass=wechat
+X-GNOME-SingleWindow=true
+SingleMainWindow=true
+Actions=quit;
+
+[Desktop Action quit]
+Name=Quit WeChat
+Name[zh_CN]=退出
+Exec=bash -c '/usr/bin/killall wechat'
+Icon=application-exit
