--- a/linuxqq/PKGBUILD
+++ b/linuxqq/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=linuxqq
-pkgver=3.2.8.23873
+pkgver=3.2.9.24402
 pkgrel=1
 pkgdesc="New Linux QQ based on Electron"
 arch=(loong64)
@@ -9,9 +9,9 @@ groups=('apps')
 depends=(liblol)
 options=(strip !debug)
 _downver=`echo ${pkgver}|sed -r 's/([0-9]+).([0-9]+).([0-9]+).([0-9]+)/\1.\2.\3-\4/'`
-source=("https://dldir1.qq.com/qqfile/qq/QQNT/1e486dc4/${pkgname}_${_downver}_loongarch64.deb"
+source=("https://60-6-2-199.volcsiriusbd.com/dldir1.qq.com/qqfile/qq/QQNT/442cbbb1/${pkgname}_${_downver}_loongarch64.deb"
     linuxqq.sh)
-sha256sums=('56ec7abcaa5c96b8bd718096ed84f76b558ab815079e9e6e84f6bd37863b4ac6'
+sha256sums=('4f17a048b3c818534fb5def3fa59b2213c5b5115ddf9e672d805106a27f2f3fb'
             'fcc8ab360be9fde853b9a4279251072df6807a3bd697677cd8175fb0b89d9be7')
 
 package() {
