--- a/linuxqq/PKGBUILD
+++ b/linuxqq/PKGBUILD
@@ -12,9 +12,10 @@ _downver=`echo ${pkgver}|sed -r 's/([0-9]+).([0-9]+).([0-9]+).([0-9]+)/\1.\2.\3-
 source=("https://60-6-2-199.volcsiriusbd.com/dldir1.qq.com/qqfile/qq/QQNT/442cbbb1/${pkgname}_${_downver}_loongarch64.deb"
     linuxqq.sh)
 sha256sums=('4f17a048b3c818534fb5def3fa59b2213c5b5115ddf9e672d805106a27f2f3fb'
-            'fcc8ab360be9fde853b9a4279251072df6807a3bd697677cd8175fb0b89d9be7')
+            '482aafceb54fd70204337a8596edd6791349998881869e319353b44d85364712')
 
 package() {
   tar -C ${pkgdir} -xf data.tar.xz
+  sed -i 's/qq %U/qq --no-sandbox %U/'  ${pkgdir}/usr/share/applications/qq.desktop
   install -Dm755 ${srcdir}/linuxqq.sh ${pkgdir}/usr/bin/linuxqq
 }
