--- a/wemeet/PKGBUILD
+++ b/wemeet/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc="Tencent Video Conferencing, tencent meeting 腾讯会议"
 arch=(loong64)
 url="https://meeting.tencent.com"
 license=(custom)
-depends=(liblol)
+depends=(liblol libcurl-gnutls)
 OPTIONS=(strip !debug)
 source=("wemeet-${pkgver}-loongarch.deb")
 sha256sums=('0e7bf4a499c14b879a4488dea88e059e434249686f8cfd700e69dfa336ac28b9')
