--- a/dingtalk/PKGBUILD
+++ b/dingtalk/PKGBUILD
@@ -3,7 +3,7 @@ pkgver=7.6.45.5032501
 pkgrel=1
 pkgdesc="钉钉"
 arch=(loong64)
-url="https://meeting.tencent.com"
+url="https://www.dingtalk.com/"
 license=(custom)
 groups=('apps')
 depends=(liblol)
@@ -19,12 +19,12 @@ source=("https://dtapp-pub.dingtalk.com/dingtalk-desktop/xc_dingtalk_update/linu
 )
 
 sha256sums=('0580bdd9d0b62a350818f088ed0ed8452c2ffd004cf0a983b3abd3e3915f46b3'
-            'a2f1ded933d3dcdd3b3fc060c65abb57c47881684b36c05090fdaa75ceb42e05'
-            '774f3b26620495e67d2236bcec9df00476777bb8a3093de352db1cf57c000d49'
-            '9f6c0cf7a4ba1012af3c867831c06fe6674620552233e8460858beecf2183b92'
-            '7fa9a1f744c6c709021eeb68d6965d0216fc2ad5433f1ae79bcfaa930956a627'
-            '12b704bcce79b1c59b26ae64110a1a502cbbd804bf5d6afa68c16211dacfc82d'
-            'e76482b9d0ecf8138b45eb4433b27e1a6bd6a09635b383db38097622f7eb9baa')
+  'a2f1ded933d3dcdd3b3fc060c65abb57c47881684b36c05090fdaa75ceb42e05'
+  '774f3b26620495e67d2236bcec9df00476777bb8a3093de352db1cf57c000d49'
+  '9f6c0cf7a4ba1012af3c867831c06fe6674620552233e8460858beecf2183b92'
+  '7fa9a1f744c6c709021eeb68d6965d0216fc2ad5433f1ae79bcfaa930956a627'
+  '12b704bcce79b1c59b26ae64110a1a502cbbd804bf5d6afa68c16211dacfc82d'
+  'e76482b9d0ecf8138b45eb4433b27e1a6bd6a09635b383db38097622f7eb9baa')
 
 noextract=()
 for _source in "${source[@]}"; do
